# Homework_4

./: .travis.yml  CMakeLists.txt  annotated.html  classes.html  description.json.in  dir_000001_000000.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  globals.html  globals_func.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherits.html  ip__printing_8hpp.html  ip__printing_8hpp__dep__incl.map  ip__printing_8hpp__dep__incl.md5  ip__printing_8hpp__incl.md5  ip__printing_8hpp_source.html  main_8cpp.html  main_8cpp__incl.map  menudata.js  namespaceip__printing.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  structip__printing_1_1is__ip__container.html  structip__printing_1_1is__ip__container_3_01std_1_1forward__list_3_01Args_8_8_8_01_4_01_4.html  structip__printing_1_1is__ip__container_3_01std_1_1forward__list_3_01Args_8_8_8_01_4_01_4__coll__graph.md5  structip__printing_1_1is__ip__container_3_01std_1_1forward__list_3_01Args_8_8_8_01_4_01_4__inherit__graph.map  structip__printing_1_1is__ip__container_3_01std_1_1forward__list_3_01Args_8_8_8_01_4_01_4__inherit__graph.md5  structip__printing_1_1is__ip__container_3_01std_1_1list_3_01Args_8_8_8_01_4_01_4.html  structip__printing_1_1is__ip__container_3_01std_1_1list_3_01Args_8_8_8_01_4_01_4__coll__graph.map  structip__printing_1_1is__ip__container_3_01std_1_1vector_3_01Args_8_8_8_01_4_01_4.html  structip__printing_1_1is__ip__container__coll__graph.md5  structip__printing_1_1is__ip__container__inherit__graph.map
gtest/: CMakeCache.txt  Makefile  cmake_install.cmake
include/: ip_printing.hpp
search/: all_0.js  classes_0.js  files_0.js  functions_1.js  pages_0.js
(+2 files in other folders)
